Bug 115086 - Crash in: sc::PivotTableDataProvider::assignLabelsToDataSequence(unsigned int)
Summary: Crash in: sc::PivotTableDataProvider::assignLabelsToDataSequence(unsigned int)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.4.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.2.0 target:6.0.7 target:6.1.1
Keywords: bibisected, bisected, haveBacktrace, regression
Depends on:
Blocks:
 
Reported: 2018-01-18 11:35 UTC by Xisco Faulí
Modified: 2018-08-16 10:09 UTC (History)
5 users (show)

See Also:
Crash report or crash signature: ["sc::PivotTableDataProvider::assignLabelsToDataSequence(unsigned int)"]


Attachments
sample file (32.63 KB, application/zip)
2018-01-18 11:35 UTC, Xisco Faulí
Details
gdb backtrace (13.22 KB, text/plain)
2018-01-18 12:20 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2018-01-18 11:35:13 UTC
Created attachment 139177 [details]
sample file

Steps to reproduce:
1. Open attached document
2. Switch to charts sheet or SAVE
CRASH!

The document has been password-protected due to the content. Please ask me privately for the password.

Reproduced in

Version: 6.1.0.0.alpha0+
Build ID: 226804c8f7d2306562380283edfd919a88863807
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group threaded
Comment 1 Xisco Faulí 2018-01-18 12:20:09 UTC
Created attachment 139179 [details]
gdb backtrace
Comment 2 Xisco Faulí 2018-01-18 12:35:08 UTC
Regression introduced by:

author	Tomaž Vajngerl <tomaz.vajngerl@collabora.co.uk>	2017-04-24 00:09:08 +0200
committer	Tomaž Vajngerl <quikee@gmail.com>	2017-04-24 08:36:45 +0200
commit c45358e928b9b9419bba10a0fcb661696cb7647a (patch)
tree 4d1814a53edd0df80d5c1abdce5812816e6b608a
parent 3dbcd93977ffd6e0c5a38c34a8f292406e65d0e5 (diff)
preserve "Total" label on round-trip, remove code duplication

Bisected with: bibisect-linux-64-5.4

Adding Cc: to Tomaž Vajngerl
Comment 3 Julien Nabet 2018-01-23 15:28:04 UTC
Xisco: I got a pb trying to use the sample file, could you re upload it?
(no need to zip it since an ods is already a zip)
Comment 4 Xisco Faulí 2018-01-24 10:16:57 UTC
(In reply to Julien Nabet from comment #3)
> Xisco: I got a pb trying to use the sample file, could you re upload it?
> (no need to zip it since an ods is already a zip)

Hi Julien,
The zip file is password protected. I sent you the pass by email. Did you get it?
Comment 5 Julien Nabet 2018-01-24 11:22:21 UTC
(In reply to Xisco Faulí from comment #4)
>...
> The zip file is password protected. I sent you the pass by email. Did you
> get it?
I got it.
Right now, it's building the sources from today, I'll give a try after this.
Comment 6 Julien Nabet 2018-01-24 22:03:24 UTC
On pc Debian x86-64 with master sources updated today, I could reproduce this.
Comment 7 Caolán McNamara 2018-08-15 09:45:08 UTC
I have a fix for this
Comment 8 Commit Notification 2018-08-15 11:55:26 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5779b4966954d845f3c526c340bdee8c6a92ef95

tdf#115086 crash in assignLabelsToDataSequence

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Caolán McNamara 2018-08-15 11:57:01 UTC
backports in gerrit
Comment 10 Commit Notification 2018-08-15 12:12:20 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ff16f75a474533187253a190557d6e2195a7e4cb&h=libreoffice-6-0

tdf#115086 crash in assignLabelsToDataSequence

It will be available in 6.0.7.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2018-08-15 13:01:31 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=fa89d83cdf29ea2dc33ed99aed67df5df5424036&h=libreoffice-6-1

tdf#115086 crash in assignLabelsToDataSequence

It will be available in 6.1.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Michael Meeks 2018-08-15 15:19:25 UTC
Thanks Caolan - much appreciated ! =)
Comment 13 Xisco Faulí 2018-08-16 10:09:33 UTC
Verified in

Version: 6.2.0.0.alpha0+
Build ID: 1af7f19224f18e5025352339648db659575eae33
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: threaded

@Caolán, Thanks for fixing this!!