tdf#115086 crash in assignLabelsToDataSequence

since...

commit c45358e928b9b9419bba10a0fcb661696cb7647a
Date:   Mon Apr 24 00:09:08 2017 +0200

    preserve "Total" label on round-trip, remove code duplication

Change-Id: I83ed20e1cab8d67f2f5aedcaf862756d9548bf9f