sc/source/ui/unoobj/PivotTableDataProvider.cxx
@@ -618,7 +618,7 @@ PivotTableDataProvider::assignLabelsToDataSequence(size_t nIndex)
     {
         aLabel = ScResId(STR_PIVOT_TOTAL);
     }
-    else
+    else if (nIndex < m_aLabels.size())
     {
         for (ValueAndFormat const & rItem : m_aLabels[nIndex])
         {
